# cg15

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Doxyfile  README  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  readme.txt  seganku.sln  seganku.vcxproj  seganku.vcxproj.filters
CMakeModules/: FindAssimp.cmake  FindFreeImage.cmake  FindGLFW.cmake
SEGANKU/: SEGANKU.vcxproj  SEGANKU.vcxproj.filters  camera.cpp  camera.h  eagle.cpp  eagle.h  geometry.cpp  geometry.h  light.cpp  light.h  main.cpp  physics.cpp  physics.h  player.cpp  player.h  poissondisksampler.cpp  poissondisksampler.h  sceneobject.cpp  sceneobject.h  shader.cpp  shader.h  simpledebugdrawer.cpp  simpledebugdrawer.h  surface.cpp  surface.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h
SEGANKU/effects/: particlesystem.cpp  particlesystem.h  postprocessor.cpp  postprocessor.h  shadowmap.cpp  shadowmap.h  ssaopostprocessor.cpp  ssaopostprocessor.h
SEGANKU/shaders/: blur.frag  blur_vsm.frag  blur_vsm.vert  depth_shader.frag  depth_shader.vert  depth_shader_vsm.frag  depth_shader_vsm.vert  invert_color.frag  normal_mapping.frag  normal_mapping.vert  normals_shader.vert  particles.frag  particles.vert  postprocess_invert_shader.vert  postprocess_ssao_shader.frag  ssao.frag  ssao.vert  ssao_blur_mixing.frag  text.frag  text_shader.vert  texture_shader.frag  textured_blinnphong.frag  textured_blinnphong.vert  view_positions.frag  view_positions.vert
data/models/cave/: cave.dae
data/models/cube/: cube.dae
data/models/eagle/: eagle.dae
data/models/hawk/: hawk.dae
data/models/skunk/: skunk.dae
data/models/world/: carrot.dae  shrub1.dae  shrub2.dae  t.dae  terrain.dae  terrain2.dae  terrain3.dae  terrain_2.dae  tree.dae  tree1.dae  world.dae
doxygen/: doxygen_sqlite3.db
doxygen/html/: annotated.html  camera_8h_source.html  classCamera-members.html  classCamera.html  classCamera__inherit__graph.dot  classCamera__inherit__graph.md5  classEagle-members.html  classEagle.html  classEagle__coll__graph.md5  classEagle__inherit__graph.dot  classGeometry-members.html  classGeometry.html  classGeometry__coll__graph.dot  classGeometry__coll__graph.md5  classGeometry__inherit__graph.dot  classGeometry__inherit__graph.md5  classLight-members.html  classLight.html  classLight__coll__graph.dot  classLight__coll__graph.md5  classParticleSystem-members.html  classParticleSystem.html  classParticleSystem__coll__graph.dot  classParticleSystem__coll__graph.md5  classParticleSystem__inherit__graph.dot  classParticleSystem__inherit__graph.md5  classPhysics-members.html  classPhysics.html  classPhysics__coll__graph.dot  classPhysics__coll__graph.md5  classPlayer-members.html  classPlayer.html  classPlayer__coll__graph.dot  classPlayer__coll__graph.md5  classPlayer__inherit__graph.dot  classPlayer__inherit__graph.md5  classPoissonDiskSampler-members.html  classPoissonDiskSampler.html  classSSAOPostprocessor-members.html  classSSAOPostprocessor.html  (+97 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  search.js
src/: camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  player.cpp  player.h  sceneobject.cpp  sceneobject.h  shader.h  surface.cpp  surface.h  texture.cpp  texture.h
src/geometry/: cube.cpp  cube.h  player.cpp  player.h
src/sceneobjects/: cube.cpp  cube.h
src/shaders/: normals_shader.frag  testshader.frag  testshader.vert  texture_shader.frag  texture_shader.vert
